Exercise 1.12/manifests/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: to-do-project-svc
spec:
  type: ClusterIP
  selector:
    app: to-do-project # This is the app as declared in the deployment.
  ports: # The following will let TCP traffic from port 2345 to port 8080.
    - port: 2345
      protocol: TCP
      targetPort: 8080
      name: http
